# voropp-cxxwrap-julia

./: .gitignore  CMakeLists.txt  LICENSE  README.md  container_interface_exports.md  container_poly_interface_exports.md  version.json  voronoicell_interface_exports.md
binarybuilder/: Manifest.toml  build_tarballs.jl
src/: cell.cpp  containers.cpp  loops.cpp  wrapper.cpp
